주차선검출

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,12 +125,13 @@ include_directories(
   ${OpenCV_INCLUDE_DIRS}
 )
 
-add_executable(image_publisher src/pub.cpp src/linefinder.cpp src/IPM.cpp)
-target_link_libraries(image_publisher ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+add_executable(camera_opencv_node src/pub.cpp src/linefinder.cpp src/IPM.cpp)
+add_dependencies(camera_opencv_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(camera_opencv_node ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 
 add_executable(image_listener src/sub.cpp)
+add_dependencies(image_listener ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(image_listener ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
-
 
 
 ## Declare a C++ library
